  [Michele Simionato]
  * Parallelized the splitting of the heavy sources
  * Removed the dependency from the Django ORM
  * Now the WebUI restarts the ProcessPoolExecutor at the end of each job,
    to conserve resources
  * Optimized the computation of hazard curves and statistics, especially
    for the memory consumption
  * Reduced the data transfer due to the `rlzs_assoc` and `oqparam` objects
  * Fixed a bug in the disaggregation calculator when a source group has
    been filtered away by the maximum distance criterium
  * Fixed an encoding error in the reports when the description contains a
    non-ASCII character
  * Changed the distribution framework: celery is supported in a way more
    consistent with the other approaches; moreover, ipyparallel is supported
  * Hazard maps are now a fake output, dynamically generated at export time
  * Made the number of produced tasks proportional to the number of tiles
  * Raised an error for event_based_risk producing no GMFs
  * Added a view for the slow sources
  * Transmitted the attributes of a SourceGroup to the underlying sources
  * Fixed the names of exported files for hazard maps in .geojson format
  * Added an header with metadata to the exported hazard curves and maps
  * Avoid storing filtered-away probability maps, thus fixing a bug
  * Restored the precalculation consistency check that was disabled during the
    transition to engine 2.0
  * Fixed a bug with `oq engine --delete-calculation`
  * Hazard curves/maps/uniform spectra can now be recomputed
  * Restored the early check on missing taxonomies
  * Raise an early error if an user forget the `rupture_mesh_spacing` parameter
  * Fixed a bug while deleting jobs from the db in Ubuntu 12.04
  * Ported the shapefile converter from the nrml_converters
  * Added source model information in the file `realizations.csv`
  * `oq engine --run job.ini --exports csv` now also exports the realizations
  * Introduced the format NRML 0.5 for source models